--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "cognito-auth",
+  "name": "digi-process2",
   "version": "0.0.0",
+  "engines": {
+    "node": "10.16.3"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,37 +14,66 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.4",
-    "@angular/common": "~9.1.4",
-    "@angular/compiler": "~9.1.4",
-    "@angular/core": "~9.1.4",
-    "@angular/forms": "~9.1.4",
-    "@angular/platform-browser": "~9.1.4",
-    "@angular/platform-browser-dynamic": "~9.1.4",
-    "@angular/router": "~9.1.4",
-    "rxjs": "~6.5.4",
+    "@angular/animations": "^8.2.5",
+    "@angular/cdk": "^8.2.0",
+    "@angular/common": "~8.2.4",
+    "@angular/compiler": "~8.2.4",
+    "@angular/core": "~8.2.4",
+    "@angular/fire": "^5.3.0",
+    "@angular/forms": "~8.2.4",
+    "@angular/material": "^8.2.0",
+    "@angular/platform-browser": "~8.2.4",
+    "@angular/platform-browser-dynamic": "~8.2.4",
+    "@angular/router": "~8.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@syncfusion/ej2-angular-spreadsheet": "^17.3.27",
+    "admin-lte": "^3.0.1",
+    "angular-bootstrap-md": "^8.2.0",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
+    "firebase": ">= 5.5.7 <8",
+    "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
+    "mdbootstrap": "^4.8.9",
+    "ng-click-outside": "^5.1.1",
+    "ng2-charts": "^2.3.0",
+    "ng2-pdf-viewer": "^5.3.4",
+    "ngx-doc-viewer": "^0.1.27",
+    "ngx-document-view": "^1.0.1",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.0.3",
+    "rxjs": "~6.4.0",
+    "screenfull": "^5.0.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.4",
-    "@angular/cli": "~9.1.4",
-    "@angular/compiler-cli": "~9.1.4",
-    "@angular/language-service": "~9.1.4",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
+    "@angular-devkit/build-angular": "^0.803.22",
+    "@angular/cli": "^8.3.6",
+    "@angular/compiler-cli": "~8.2.4",
+    "@angular/language-service": "~8.2.4",
+    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.0",
+    "firebase-tools": "^6.10.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3",
+    "webpack-bundle-analyzer": "^3.6.0"
   }
 }
